tests/should_fail/const_b.c
int main(void) {
	int * const b = 0;
	b += 1;
}
